ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - masagin.de
    - bucai.tk
    - masagin.tk
    secretName: letsencrypt-prod
  rules:
  - host: masagin.de
    http:
      paths:
      - path: /favicon.ico
        backend:
          serviceName: favicon
          servicePort: 80
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
  - host: bucai.tk
    http:
      paths:
      - path: /favicon.ico
        backend:
          serviceName: favicon
          servicePort: 80
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
  - host: masagin.tk
    http:
      paths:
      - path: /favicon.ico
        backend:
          serviceName: favicon
          servicePort: 80
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 80
---
